--- a/userside/public/index.html
+++ b/userside/public/index.html
@@ -24,6 +24,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+    <link href="node_modules/materialize-css/dist/css/materialize.css" rel="stylesheet" type="text/css" media="screen"/>
     <title>React App</title>
   </head>
   <body>
@@ -39,5 +40,8 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+    <script src="node_modules/jquery/dist/jquery.js"></script>
+    <script src="node_modules/materialize-css/dist/js/materialize.js"></script>
+    <script src="bundle.js"></script>
   </body>
 </html>
